--- a/references.bib
+++ b/references.bib
@@ -472,3 +472,47 @@
 	date = {2024-06-09},
 	url = {http://dx.doi.org/10.1101/2024.06.06.597716}
 }
+
+@article{abramson2024a,
+	title = {Accurate structure prediction of biomolecular interactions with AlphaFold 3},
+	author = {Abramson, Josh and Adler, Jonas and Dunger, Jack and Evans, Richard and Green, Tim and Pritzel, Alexander and Ronneberger, Olaf and Willmore, Lindsay and Ballard, Andrew J. and Bambrick, Joshua and Bodenstein, Sebastian W. and Evans, David A. and Hung, Chia-Chun and {O{\textquoteright}Neill}, Michael and Reiman, David and Tunyasuvunakool, Kathryn and Wu, Zachary and {{\v{Z}}emgulyt{\.{e}}}, {Akvil{\.{e}}} and Arvaniti, Eirini and Beattie, Charles and Bertolli, Ottavia and Bridgland, Alex and Cherepanov, Alexey and Congreve, Miles and Cowen-Rivers, Alexander I. and Cowie, Andrew and Figurnov, Michael and Fuchs, Fabian B. and Gladman, Hannah and Jain, Rishub and Khan, Yousuf A. and Low, Caroline M. R. and Perlin, Kuba and Potapenko, Anna and Savy, Pascal and Singh, Sukhdeep and Stecula, Adrian and Thillaisundaram, Ashok and Tong, Catherine and Yakneen, Sergei and Zhong, Ellen D. and Zielinski, Michal and {{\v{Z}}ídek}, Augustin and Bapst, Victor and Kohli, Pushmeet and Jaderberg, Max and Hassabis, Demis and Jumper, John M.},
+	year = {2024},
+	month = {05},
+	date = {2024-05-08},
+	journal = {Nature},
+	pages = {493--500},
+	volume = {630},
+	number = {8016},
+	doi = {10.1038/s41586-024-07487-w},
+	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
+	langid = {en}
+}
+
+@article{2024,
+	title = {AlphaFold3 {\textemdash} why did Nature publish it without its code?},
+	year = {2024},
+	month = {05},
+	date = {2024-05-22},
+	journal = {Nature},
+	pages = {728--728},
+	volume = {629},
+	number = {8013},
+	doi = {10.1038/d41586-024-01463-0},
+	url = {http://dx.doi.org/10.1038/d41586-024-01463-0},
+	langid = {en}
+}
+
+@article{abramson2024b,
+	title = {Accurate structure prediction of biomolecular interactions with AlphaFold 3},
+	author = {Abramson, Josh and Adler, Jonas and Dunger, Jack and Evans, Richard and Green, Tim and Pritzel, Alexander and Ronneberger, Olaf and Willmore, Lindsay and Ballard, Andrew J. and Bambrick, Joshua and Bodenstein, Sebastian W. and Evans, David A. and Hung, Chia-Chun and {O{\textquoteright}Neill}, Michael and Reiman, David and Tunyasuvunakool, Kathryn and Wu, Zachary and {{\v{Z}}emgulyt{\.{e}}}, {Akvil{\.{e}}} and Arvaniti, Eirini and Beattie, Charles and Bertolli, Ottavia and Bridgland, Alex and Cherepanov, Alexey and Congreve, Miles and Cowen-Rivers, Alexander I. and Cowie, Andrew and Figurnov, Michael and Fuchs, Fabian B. and Gladman, Hannah and Jain, Rishub and Khan, Yousuf A. and Low, Caroline M. R. and Perlin, Kuba and Potapenko, Anna and Savy, Pascal and Singh, Sukhdeep and Stecula, Adrian and Thillaisundaram, Ashok and Tong, Catherine and Yakneen, Sergei and Zhong, Ellen D. and Zielinski, Michal and {{\v{Z}}ídek}, Augustin and Bapst, Victor and Kohli, Pushmeet and Jaderberg, Max and Hassabis, Demis and Jumper, John M.},
+	year = {2024},
+	month = {05},
+	date = {2024-05-08},
+	journal = {Nature},
+	pages = {493--500},
+	volume = {630},
+	number = {8016},
+	doi = {10.1038/s41586-024-07487-w},
+	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
+	langid = {en}
+}
